--- a/static-code-analysis/pom.xml
+++ b/static-code-analysis/pom.xml
@@ -4,7 +4,17 @@
   <artifactId>static-code-analysis</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>StaticCodeAnalysis</name>
-  <build>
+  <properties>
+    <java.version>20</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    
+    <sonarqube.version>9.4.0.54424</sonarqube.version>
+    <sonar.organization>ramgrg</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonarjava.version>7.15.0.30507</sonarjava.version> 
+   </properties>
+   <build>
       <pluginManagement>
           <plugins>
               <plugin>
@@ -17,16 +27,25 @@
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>3.0.0</version>
               </plugin>
+              <plugin>
+                 <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
+                 <artifactId>sonar-packaging-maven-plugin</artifactId>
+                 <version>1.20.0.405</version>
+                 <extensions>true</extensions>
+                 <configuration>
+                    <pluginKey>GreenForLoop</pluginKey>
+                    <pluginName>${project.name}</pluginName>
+                    <pluginClass>com.se4gd.sonar.java.SonarqubeJavaplugin</pluginClass>
+                    <sonarLintSupported>true</sonarLintSupported>
+                    <sonarQubeMinVersion>${sonarqube.version}</sonarQubeMinVersion>
+                    <jreMinVersion>${java.version}</jreMinVersion>    
+                 </configuration>
+              </plugin>
           </plugins>
       </pluginManagement>
   </build>
   <dependencies>
       <dependency>
-           <groupId>org.sonarsource.sonarqube</groupId>
-           <artifactId>sonar-plugin-api</artifactId>
-            <version>9.4.0.54424</version>
-      </dependency>
-     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.7.0</version>
@@ -37,6 +56,11 @@
        <artifactId>assertj-core</artifactId>
        <version>3.17.2</version>
      </dependency>
+      <dependency>
+         <groupId>org.sonarsource.sonarqube</groupId>
+         <artifactId>sonar-plugin-api</artifactId>
+         <version>${sonarqube.version}</version>
+      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
@@ -50,12 +74,12 @@
      <dependency>
        <groupId>org.sonarsource.java</groupId>
        <artifactId>sonar-java-plugin</artifactId>
-       <version>7.15.0.30507</version>
+       <version>${sonarjava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.java</groupId>
        <artifactId>java-checks-testkit</artifactId>
-       <version>7.15.0.30507</version>
+       <version>${sonarjava.version}</version>
        <scope>test</scope>
      </dependency>
   </dependencies>
@@ -66,8 +90,4 @@
         <url>https://maven.pkg.github.com/ramgrg/static-code-analysis/</url>
     </repository>
   </distributionManagement>
-  <properties>
-    <sonar.organization>ramgrg</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-   </properties>
 </project>
