--- a/static-code-analysis/pom.xml
+++ b/static-code-analysis/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>static-code-analysis</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>StaticCodeAnalysis</name>
+  
+  <description>It defines the rules that detect energy smells in different loop types in java</description>
+  <url>https://github.com/ramgrg/static-code-analysis</url>
   <properties>
     <java.version>11</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -15,34 +18,32 @@
     <sonarjava.version>7.15.0.30507</sonarjava.version> 
    </properties>
    <build>
-      <pluginManagement>
-          <plugins>
-              <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version>
-              </plugin>
-              <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-surefire-plugin</artifactId>
-                 <version>3.0.0</version>
-              </plugin>
-              <plugin>
-                 <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
-                 <artifactId>sonar-packaging-maven-plugin</artifactId>
-                 <version>1.21.0.505</version>
-                 <extensions>true</extensions>
-                 <configuration>
-                    <pluginKey>greenforloop</pluginKey>
-                    <pluginName>${project.name}</pluginName>
-                    <pluginClass>com.se4gd.sonar.java.SonarqubeJavaplugin</pluginClass>
-                    <sonarLintSupported>true</sonarLintSupported>
-                    <sonarQubeMinVersion>${sonarqube.version}</sonarQubeMinVersion>
-                    <jreMinVersion>${java.version}</jreMinVersion>    
-                 </configuration>
-              </plugin>
-          </plugins>
-      </pluginManagement>
+      <plugins>
+          <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+          </plugin>
+          <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-surefire-plugin</artifactId>
+             <version>3.0.0</version>
+          </plugin>
+          <plugin>
+             <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
+             <artifactId>sonar-packaging-maven-plugin</artifactId>
+             <version>1.21.0.505</version>
+             <extensions>true</extensions>
+             <configuration>
+                <pluginKey>greenforloop</pluginKey>
+                <pluginName>${project.name}</pluginName>
+                <pluginClass>com.se4gd.sonar.java.SonarqubeJavaplugin</pluginClass>
+                <sonarLintSupported>true</sonarLintSupported>
+                <sonarQubeMinVersion>${sonarqube.version}</sonarQubeMinVersion>
+                <jreMinVersion>${java.version}</jreMinVersion>    
+             </configuration>
+          </plugin>
+      </plugins>
   </build>
   <dependencies>
       <dependency>
