--- a/static-code-analysis/pom.xml
+++ b/static-code-analysis/pom.xml
@@ -35,7 +35,7 @@
              <version>1.21.0.505</version>
              <extensions>true</extensions>
              <configuration>
-                <pluginKey>greenforloop</pluginKey>
+                <pluginKey>staticcode</pluginKey>
                 <pluginName>${project.name}</pluginName>
                 <pluginClass>com.se4gd.sonar.java.SonarqubeJavaplugin</pluginClass>
                 <sonarLintSupported>true</sonarLintSupported>
