--- a/greenForLoops/docker-compose.yml
+++ b/greenForLoops/docker-compose.yml
@@ -2,7 +2,7 @@ version : "3.3"
 services:
   sonar:
     build: .
-    image: "green-for-loop:latest"
-    container_name: container-green-for-loop
+    image: "green-for-loops:latest"
+    container_name: container-green-for-loops
     ports: 
         - "9000:9000"
