filepath changes for workflows

--- a/greenForLoops/Dockerfile
+++ b/greenForLoops/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.1-openjdk-11-slim AS builder
 COPY . /usr/src/green-for-loops
 WORKDIR /usr/src/green-for-loops
-RUN ./maven-build.sh
+RUN ./greenForLoops/maven-build.sh
 
 
 FROM sonarqube:10.1.0-community
